sg.tf
#Provisions public SG
resource "aws_security_group" "allow_public" {
  count       = var.INTERNAL ? 0 : 1
  name        = "${var.COMPONENT}-${var.ENV}-public-sg"
  description = "${var.COMPONENT}-${var.ENV}-public-sg"
  vpc_id      = data.terraform_remote_state.vpc.outputs.VPC_ID

  ingress {
    from_port        = var.APP_PORT
    to_port          = var.APP_PORT
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  ingress {
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = [data.terraform_remote_state.vpc.outputs.VPC_CIDR , data.terraform_remote_state.vpc.outputs.DEFAULT_VPC_CIDR]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  
  # tags = {
  #   Name = "${var.COMPONENT}-${var.ENV}-public-sg"
  # }
}

#Provisions private SG
resource "aws_security_group" "allow_private" {
  count       = var.INTERNAL ? 1 : 0
  name        = "${var.COMPONENT}-${var.ENV}-private-sg"
  description = "${var.COMPONENT}-${var.ENV}-private-sg"
  vpc_id      = data.terraform_remote_state.vpc.outputs.VPC_ID

  ingress {
    from_port        = var.APP_PORT
    to_port          = var.APP_PORT
    protocol         = "tcp"
    cidr_blocks      = [data.terraform_remote_state.vpc.outputs.VPC_CIDR , data.terraform_remote_state.vpc.outputs.DEFAULT_VPC_CIDR]
  }
  ingress {
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = [data.terraform_remote_state.vpc.outputs.VPC_CIDR , data.terraform_remote_state.vpc.outputs.DEFAULT_VPC_CIDR]
  }
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  
  tags = {
    Name = "${var.COMPONENT}-${var.ENV}-private-sg"
  }
}
